--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -23,4 +23,9 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     wearApp project(':wear')
     compile 'com.google.android.gms:play-services-wearable:+'
+    compile 'com.squareup.dagger:dagger:1.2.2'
+    compile 'com.jakewharton:butterknife:5.1.2'
+    compile 'com.squareup:otto:1.3.5'
+    compile 'com.squareup.retrofit:retrofit:1.6.1'
+    provided 'com.squareup.dagger:dagger-compiler:1.2.1'
 }
