--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -27,5 +27,7 @@ dependencies {
     compile 'com.jakewharton:butterknife:5.1.2'
     compile 'com.squareup:otto:1.3.5'
     compile 'com.squareup.retrofit:retrofit:1.6.1'
-    provided 'com.squareup.dagger:dagger-compiler:1.2.1'
+    provided 'com.squareup.dagger:dagger-compiler:1.2.2'
+    compile 'com.jakewharton.timber:timber:2.4.+'
+    compile 'com.jakewharton.hugo:hugo-runtime:1.1.0'
 }
