--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -3,18 +3,24 @@
     package="pl.michalgorny.letmeknow" >
 
     <application
+        android:name=".LetMeKnowApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme"
-        android:name="pl.michalgorny.letmeknow.LetMeKnowApplication">
+        android:theme="@style/AppTheme" >
         <activity
-            android:name=".PlayActivity"
+            android:name=".ui.PlayActivity"
             android:label="@string/title_activity_play" >
+        </activity>
+        <activity
+            android:name=".ui.MainActivity"
+            android:label="@string/title_activity_main" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
     </application>
+
 </manifest>
