--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -11,18 +11,22 @@ android {
         versionCode 1
         versionName "1.0"
     }
+
+    lintOptions {
+        abortOnError false
+    }
+
     buildTypes {
         release {
             runProguard false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    sourceSets { main { res.srcDirs = ['src/main/res', 'src/main/res/drawable'] } }
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    wearApp project(':wear')
-    compile 'com.google.android.gms:play-services-wearable:+'
     compile 'com.squareup.dagger:dagger:1.2.2'
     compile 'com.jakewharton:butterknife:5.1.2'
     compile 'com.squareup:otto:1.3.5'
@@ -30,4 +34,7 @@ dependencies {
     provided 'com.squareup.dagger:dagger-compiler:1.2.2'
     compile 'com.jakewharton.timber:timber:2.4.+'
     compile 'com.jakewharton.hugo:hugo-runtime:1.1.0'
+    compile 'com.github.dmytrodanylyk.circular-progress-button:library:1.1.3'
+    compile 'com.parse.bolts:bolts-android:1.1.3'
+    compile fileTree(dir: 'libs', include: 'Parse-*.jar')
 }
