Task changing order in iml file added. Fix for Junit test run fail

--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -1,8 +1,8 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 20
-    buildToolsVersion "20.0.0"
+    compileSdkVersion 19
+    buildToolsVersion '21.0.2'
 
     defaultConfig {
         applicationId "pl.michalgorny.letmeknow"
@@ -25,7 +25,9 @@ android {
     sourceSets { main { res.srcDirs = ['src/main/res', 'src/main/res/drawable'] } }
 }
 
+
 dependencies {
+    compile 'junit:junit:4.12-beta-3'
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.squareup.dagger:dagger:1.2.2'
     compile 'com.jakewharton:butterknife:5.1.2'
@@ -38,3 +40,25 @@ dependencies {
     compile 'com.parse.bolts:bolts-android:1.1.3'
     compile fileTree(dir: 'libs', include: 'Parse-*.jar')
 }
+
+task pushDownJdkDependency() {
+    def imlFile = file("mobile.iml")
+    doLast {
+        try {
+            def parsedXml = (new XmlParser()).parse(imlFile)
+            def jdkNode = parsedXml.component[1].orderEntry.find { it.'@type' == 'jdk' }
+
+            parsedXml.component[1].remove(jdkNode)
+            new Node(parsedXml.component[1], 'orderEntry', ['type': 'jdk', 'jdkName': "Android API 19 Platform", 'jdkType': 'Android SDK'])
+            def writer = new StringWriter()
+            new XmlNodePrinter(new PrintWriter(writer)).print(parsedXml)
+            imlFile.text = writer.toString()
+
+        } catch (FileNotFoundException e) {
+            // nop, iml not found
+        }
+    }
+}
+
+preBuild.dependsOn(pushDownJdkDependency)
+
